# QtNsisInstaller

./: CMakeLists.txt  FinishPage.cpp  FinishPage.h  FinishPage.ui  InstallDirPage.cpp  InstallDirPage.h  InstallDirPage.ui  InstallerWizard.cpp  InstallerWizard.h  LicensePage.cpp  LicensePage.h  LicensePage.ui  ProgressPage.cpp  ProgressPage.h  ProgressPage.ui  QtStyle_Installer.nsi  README_Frameless.md  README_QtStyle.md  SCLicence.txt  WelcomePage.cpp  WelcomePage.h  WelcomePage.ui  main.cpp
QtInstaller-src/: CLAUDE.md  CMakeLists.txt  ComponentsPage.ui  CustomTitleBar.ui  FinishDialog.ui  InstallPathPage.ui  InstallProgressPage.ui  InstallerWizard.cpp  InstallerWizard.h  InstallerWizard.ui  LicensePage.ui  WelcomePage.ui  main.cpp  resources.qrc
